unpackaged/main/default/objects/CM_Diagnosis__c/CM_Diagnosis__c.object-meta.xml
<CustomObject>
    <description>This object is a Case Management object to hold data around diagnosis experiences. This has been requested to control multiple diagnosis points of data onto one record per scenario.

 This tends to have individual treatment questions that coincide with our vendor partners.</description>
    <label>CM Diagnosis</label>
    <nameField>
        <label>CM Diagnosis Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Diagnoses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>