unpackaged/main/default/objects/CM_Diagnosis__c/fields/Age_Diagnosis_Received__c.field-meta.xml
<CustomField>
    <fullName>Age_Diagnosis_Received__c</fullName>
    <description>This is the age at which the injured party was when they received their diagnosis. This is what they provide, we will provide a formulated version of this too, to compare information.</description>
    <inlineHelpText>Age the client provides for when diagnosis was received.</inlineHelpText>
    <label>Age Diagnosis Received</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>