unpackaged/main/default/objects/CM_Diagnosis__c/fields/Cancer_Stage__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Stage__c</fullName>
    <description>Cancer stage assigned to their cancer type during diagnosis.</description>
    <inlineHelpText>Stage of cancer provided during diagnosis</inlineHelpText>
    <label>Cancer Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Diagnosis</valueSetName>
    </valueSet>
</CustomField>