unpackaged/main/default/objects/CM_Diagnosis__c/fields/Cancer_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancer_Type__c</fullName>
    <description>Type of cancer that the diagnosis represents</description>
    <inlineHelpText>Type of Cancer received in diagnosis</inlineHelpText>
    <label>Cancer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancers</valueSetName>
    </valueSet>
</CustomField>