unpackaged/main/default/objects/CM_Diagnosis__c/fields/Date_of_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Diagnosis__c</fullName>
    <description>Date the diagnosis was provided to the injured party</description>
    <inlineHelpText>Date the diagnosis was provided to the injured party</inlineHelpText>
    <label>Date of Diagnosis</label>
    <type>Date</type>
</CustomField>