unpackaged/main/default/objects/CM_Diagnosis__c/fields/FX_Age_at_Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>FX_Age_at_Diagnosis__c</fullName>
    <description>Used to auto calculate the age of the injured party during their diagnosis based on information provided so it can be compared to what may be provided by the client themselves. Either use for 100% accuracy or to check for any discrepancies.</description>
    <formula>IF( ISBLANK(  Intake__r.Injured_Party_Birthdate__c  ) , NULL ,

  IF( DATE( 2000 , MONTH( Intake__r.Injured_Party_Birthdate__c ) , DAY( Intake__r.Injured_Party_Birthdate__c ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),

     YEAR (TODAY()) - YEAR ( Intake__r.Injured_Party_Birthdate__c ),

     YEAR (TODAY()) - YEAR ( Intake__r.Injured_Party_Birthdate__c ) -1 )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Auto-calculated age at diagnosis of the injured party.</inlineHelpText>
    <label>FX Age at Diagnosis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>