unpackaged/main/default/objects/CM_Diagnosis__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <description>Intake this diagnosis is tied to. A diagnosis cannot exist without an intake.</description>
    <inlineHelpText>Intake the Diagnosis is assigned/related to.</inlineHelpText>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>CM Diagnoses</relationshipLabel>
    <relationshipName>CM_Diagnoses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>