unpackaged/main/default/objects/CM_Diagnosis__c/fields/State_Diagnosis_Given__c.field-meta.xml
<CustomField>
    <fullName>State_Diagnosis_Given__c</fullName>
    <description>The state in which the diagnosis was given in. This is the state the injured party received their diagnosis.</description>
    <inlineHelpText>The state in which the injured party received their diagnosis.</inlineHelpText>
    <label>State Diagnosis Given</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>