unpackaged/main/default/objects/CM_Diagnosis__c/fields/Treatment_Radiation__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Radiation__c</fullName>
    <description>Provided by vendor partner to determine treatment (Intake Desk- Vendor)</description>
    <inlineHelpText>Was Radiation provided as a Treatment?</inlineHelpText>
    <label>Treatment Radiation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>