unpackaged/main/default/objects/CM_Diagnosis__c/fields/Treatment_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Surgery__c</fullName>
    <description>Provided by vendor partner to determine treatment (Intake Desk- Vendor)</description>
    <inlineHelpText>Was surgery received as a treatment?</inlineHelpText>
    <label>Treatment Surgery</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>